# MCP-Server-Example

./: README.md  pyproject.toml
src/mcp_server_deployment.egg-info/: PKG-INFO  SOURCES.txt
src/mcpserver/: __main__.py  deployment.py
